--- a/secret.yaml
+++ b/secret.yaml
@@ -9,8 +9,9 @@ metadata:
   annotations:
     kargo.akuity.io/authorized-projects: kargo-demo
 stringData:
+stringData:
   type: git
   project: default
-  url: https://github.com/pratik3686/kargo-demo-new.git
-  username: pratik3686
-  password: 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
+  url: https://github.com/israfilalam22/kargo-demo-new.git
+  username: israfilalam22
+  password: 
